// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteAdminOverviewPage < 2 users 1`] = `
<div
  className="site-admin-overview-page"
>
  <div
    className="pt-3 mb-4"
  />
  <div
    className="list-group"
  >
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/repositories"
    >
      100
       
      repositories
    </a>
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/repositories"
    >
      1,825,299,556
       
      bytes stored
    </a>
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/repositories"
    >
      2,616,264
       
      lines of code indexed
    </a>
  </div>
</div>
`;

exports[`SiteAdminOverviewPage >= 2 users 1`] = `
<div
  className="site-admin-overview-page"
>
  <div
    className="pt-3 mb-4"
  />
  <div
    className="list-group"
  >
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/repositories"
    >
      100
       
      repositories
    </a>
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/repositories"
    >
      1,825,299,556
       
      bytes stored
    </a>
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/repositories"
    >
      2,616,264
       
      lines of code indexed
    </a>
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/users"
    >
      10
       
      users
    </a>
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/organizations"
    >
      5
       
      organizations
    </a>
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/surveys"
    >
      100
       
      user survey responses
    </a>
    <div
      className="list-group-item"
    >
      <div
        className="d-flex justify-content-between align-items-center position-relative"
      >
        <span
          className="h5 mb-0 font-weight-normal p-2"
        >
          10
           
          active users
           last week
        </span>
        <button
          aria-label="Collapse section"
          className="d-flex btn btn-icon collapsible__expand-btn stretched-link"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-label="Close section"
            className="mdi-icon icon-inline"
            fill="currentColor"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
            />
          </svg>
        </button>
      </div>
      <div
        className="site-admin-usage-statistics-page"
      >
        <div
          className="site-admin-overview-page__detail-header"
        >
          <h2>
            Weekly unique users
          </h2>
          <h3>
            <a
              className="btn btn-secondary"
              href="/site-admin/usage-statistics"
            >
              View all usage statistics
               
              <svg
                className="mdi-icon icon-inline"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
                />
              </svg>
            </a>
          </h3>
        </div>
        <svg
          viewBox="0 0 500 200"
        />
        <small
          className="site-admin-usage-statistics-page__tz-note"
        >
          <i>
            GMT/UTC time
          </i>
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`SiteAdminOverviewPage activation in progress 1`] = `
<div
  className="site-admin-overview-page"
>
  <div
    className="pt-3 mb-4"
  >
    <div
      className="p-0 list-group-item font-weight-normal test-site-admin-overview-menu"
    >
      <div
        className="d-flex justify-content-between align-items-center position-relative mb-0 py-3 px-3"
      >
        <div
          className="d-flex flex-column"
        >
          <span
            className="h5 mb-0 font-weight-bold"
          >
            Welcome to Sourcegraph
          </span>
          <div
            className="h5 mb-0 font-weight-normal"
          >
            Complete the steps below to finish onboarding to Sourcegraph
          </div>
        </div>
        <button
          aria-label="Collapse section"
          className="d-flex btn btn-icon collapsible__expand-btn stretched-link"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-label="Close section"
            className="mdi-icon icon-inline"
            fill="currentColor"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
            />
          </svg>
        </button>
      </div>
      <div
        className="activation-checklist list-group list-group-flush "
      >
        <div
          data-reach-accordion=""
        >
          <div
            className="activation-checklist__container list-group-item "
            data-reach-accordion-item=""
            data-state="open"
          >
            <button
              aria-controls="panel--1---1"
              aria-expanded={true}
              className="activation-checklist__button list-group-item list-group-item-action"
              data-reach-accordion-button=""
              id="button--1---1"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                className="activation-checklist-item d-flex justify-content-between h5 mb-0 font-weight-normal"
              >
                <div
                  className="d-flex align-items-center"
                >
                  <span
                    className="activation-checklist-item__icon-container icon-inline icon-down"
                  >
                    <svg
                      className="mdi-icon activation-checklist-item__icon"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                      />
                    </svg>
                  </span>
                  <span
                    className="activation-checklist-item__icon-container icon-inline icon-right"
                  >
                    <svg
                      className="mdi-icon activation-checklist-item__icon"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                      />
                    </svg>
                  </span>
                  <a
                    className="activation-checklist__title"
                    href=""
                  >
                    Add repositories
                  </a>
                </div>
                <div>
                  <svg
                    className="mdi-icon icon-inline text-muted"
                    fill="currentColor"
                    height={24}
                    viewBox="0 0 24 24"
                    width={24}
                  >
                    <path
                      d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
            <div
              aria-labelledby="button--1---1"
              className="px-2"
              data-reach-accordion-panel=""
              data-state="open"
              hidden={false}
              id="panel--1---1"
              role="region"
              tabIndex={-1}
            >
              <div
                className="activation-checklist__detail pb-1"
              >
                Configure Sourcegraph to talk to your code host
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="list-group"
  >
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/repositories"
    >
      0
       
      repositories
    </a>
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/repositories"
    >
      1,825,299,556
       
      bytes stored
    </a>
    <a
      className="list-group-item list-group-item-action h5 mb-0 font-weight-normal py-2 px-3"
      href="/site-admin/repositories"
    >
      2,616,264
       
      lines of code indexed
    </a>
  </div>
</div>
`;
